@@ -17,53 +17,87 @@
 package me.eccentric_nz.TARDIS.lazarus.disguise;
 
 import com.mojang.authlib.GameProfile;
-import com.mojang.authlib.properties.Property;
-import com.mojang.authlib.properties.PropertyMap;
+import io.papermc.lib.PaperLib;
 import me.eccentric_nz.TARDIS.TARDIS;
+import me.eccentric_nz.TARDIS.TARDISConstants;
 import me.eccentric_nz.TARDIS.enumeration.TardisModule;
-import net.minecraft.network.protocol.game.ClientboundAddEntityPacket;
+import me.eccentric_nz.TARDIS.regeneration.SkinChangerPaper;
+import me.eccentric_nz.TARDIS.regeneration.SkinChangerSpigot;
 import net.minecraft.network.protocol.game.ClientboundPlayerInfoRemovePacket;
-import net.minecraft.network.protocol.game.ClientboundPlayerInfoUpdatePacket;
-import net.minecraft.network.protocol.game.ClientboundRemoveEntitiesPacket;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.world.entity.player.Player;
 import org.bukkit.Bukkit;
 import org.bukkit.craftbukkit.v1_21_R1.entity.CraftPlayer;
+import org.bukkit.entity.Player;
 
 import java.lang.reflect.Field;
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
-import java.util.UUID;
 
 public class TARDISChameleonArchDisguiser {
 
     private final TARDIS plugin;
-    private final org.bukkit.entity.Player player;
-    // TODO choose a random default Minecraft player skin
-    private final String archSkin = "eyJ0aW1lc3RhbXAiOjE1NjY3OTQ5MTM4MjMsInByb2ZpbGVJZCI6ImY3NjdhNmIyMDgzZTQwMzhhM2ViMTAxNmI3Yjk3NDNjIiwicHJvZmlsZU5hbWUiOiJSb2JiaWUiLCJzaWduYXR1cmVSZXF1aXJlZCI6dHJ1ZSwidGV4dHVyZXMiOnsiU0tJTiI6eyJ1cmwiOiJodHRwOi8vdGV4dHVyZXMubWluZWNyYWZ0Lm5ldC90ZXh0dXJlL2FkZWIyMjQzMDBmMmYxNjEyYWM0ZmQ4NWQwNjBlYzljMmY4NDNkYmRlZjMyNGVkMzgzZDRjMGM2ZjgxNGVjNGUifX19";
-    private final String archSignature = "Spsq7rec2UB8x7SBBjDQ/hguC8Nt5XvyGUmw58Z7ZXVBbVqVLjMXMGD9MY25dy9HuWC1sMO1svrz35lJlsZArwI2Mm1c1LXTTYffrWGu7DLS2ONVDH26Cp5DB/buVLU/FTdyqB6OcZGU6zliU7sHlLBVcgv7FdS8Enoq9k9CQXUYacEyTDTQJGKgV3FDow7jDcLOQYdFTVaZsImOqhadhEmmQUZyGWtZqbKI+diIrFbUBNtIiMz14Lk3f3u7z8OQG/cabIEiKUvHZz6yCtt8LCQimHe9oEPPREQYH2ztOp3vrOli+6zvnu8GOspB4tWs8zIZZ86FQbD1PNdodrrYcG0vEKQ5zX8fuCDCPngiz5GbvJzku4SleHcx3iAdP9FeUie46ILKlBIUyvnjzBmubQVhBDB9jA+RcrYMpLz/EBU5kpAanz1M7BECsdWLqtrLD7tvYxsRfGdUmOlDT2TcpDmNeQHD0kgS8WBIXZhGa7FnnC/J1UXfNJSHKbnZ6AIfTplCnhZTI4BNGzwNdiM1rPoLE5HpRJ+2fyQn3bD6jssvZuI7S9UW1gvDfiaMG10RPiFVntjkWQVrZZ6qXbMqF1S6FbYvTTJOnjtrYqeXcLSqjCPPkcTHCn/2igl1V0D3A+NukxEFJLCXcpcW0Zx4bzQ0AWdNqcU1bHU9G3GN0QE=";
+    private final Player player;
+    private final Field gpField;
 
-    public TARDISChameleonArchDisguiser(TARDIS plugin, org.bukkit.entity.Player player) {
+    public TARDISChameleonArchDisguiser(TARDIS plugin, Player player) {
         this.plugin = plugin;
         this.player = player;
+        try {
+            gpField = net.minecraft.world.entity.player.Player.class.getDeclaredField("cD"); // cD = GameProfile
+        } catch (NoSuchFieldException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     public void changeSkin(String name) {
         ServerPlayer entityPlayer = ((CraftPlayer) player).getHandle();
-        // set name
-        for (org.bukkit.entity.Player p : Bukkit.getOnlinePlayers()) {
+        // remove player info
+        for (Player p : Bukkit.getOnlinePlayers()) {
             ServerPlayer ep = ((CraftPlayer) p).getHandle();
             if (ep != entityPlayer && p.getWorld() == player.getWorld() && p.canSee(player)) {
-                ep.connection.send(new ClientboundPlayerInfoRemovePacket(Arrays.asList(entityPlayer.getUUID())));
+                ep.connection.send(new ClientboundPlayerInfoRemovePacket(List.of(entityPlayer.getUUID())));
             }
         }
-        TARDISDisguiseTracker.ARCHED.put(player.getUniqueId(), new TARDISDisguiseTracker.ProfileData(entityPlayer.getGameProfile().getProperties(), player.getName()));
+        TARDISDisguiseTracker.ARCHED.put(player.getUniqueId(), player.getName());
+        // set name
         try {
             GameProfile arch = new GameProfile(player.getUniqueId(), name);
-            arch.getProperties().removeAll("textures");
-            arch.getProperties().put("textures", new Property("textures", archSkin, archSignature));
-            Field gpField = Player.class.getDeclaredField("cD"); // cD = GameProfile
+            gpField.setAccessible(true);
+            gpField.set(entityPlayer, arch);
+            gpField.setAccessible(false);
+        } catch (IllegalAccessException | IllegalArgumentException | SecurityException e) {
+            return;
+        }
+        // get a random skin
+        String random = ArchSkins.DEFAULTS.get(TARDISConstants.RANDOM.nextInt(ArchSkins.DEFAULTS.size()));
+        // set skin
+        if (PaperLib.isPaper()) {
+            SkinChangerPaper.set(player, random);
+        } else {
+            SkinChangerSpigot.set(player, random);
+        }
+    }
+
+    public void resetSkin() {
+        ServerPlayer entityPlayer = ((CraftPlayer) player).getHandle();
+        // set name
+        for (Player p : Bukkit.getOnlinePlayers()) {
+            ServerPlayer ep = ((CraftPlayer) p).getHandle();
+            if (ep != entityPlayer && p.getWorld() == player.getWorld() && p.canSee(player)) {
+                ep.connection.send(new ClientboundPlayerInfoRemovePacket(List.of(entityPlayer.getUUID())));
+            }
+        }
+        String oldName = TARDISDisguiseTracker.ARCHED.get(player.getUniqueId());
+        if (oldName == null || oldName.isEmpty()) {
+            plugin.getMessenger().message(plugin.getConsole(), TardisModule.HELPER_WARNING, "Could not get backed up player name from tracker!");
+            TARDISDisguiseTracker.ARCHED.remove(player.getUniqueId());
+            return;
+        }
+        try {
+            GameProfile arch = new GameProfile(player.getUniqueId(), oldName);
+            Field nameField = arch.getClass().getDeclaredField("name");
+            nameField.setAccessible(true);
+            nameField.set(arch, oldName);
+            nameField.setAccessible(false);
             gpField.setAccessible(true);
             gpField.set(entityPlayer, arch);
             gpField.setAccessible(false);
@@ -71,61 +105,12 @@ public class TARDISChameleonArchDisguiser {
             TARDISDisguiseTracker.ARCHED.remove(player.getUniqueId());
             return;
         }
-        ClientboundPlayerInfoUpdatePacket packetPlayOutPlayerInfo = new ClientboundPlayerInfoUpdatePacket(ClientboundPlayerInfoUpdatePacket.Action.ADD_PLAYER, entityPlayer);
-        ClientboundRemoveEntitiesPacket packetPlayOutEntityDestroy = new ClientboundRemoveEntitiesPacket(player.getEntityId());
-        ClientboundAddEntityPacket packetPlayOutNamedEntitySpawn = new ClientboundAddEntityPacket(entityPlayer, 0, entityPlayer.blockPosition());
-        for (org.bukkit.entity.Player p : Bukkit.getOnlinePlayers()) {
-            ServerPlayer ep = ((CraftPlayer) p).getHandle();
-            if (ep != entityPlayer && p.getWorld() == player.getWorld() && p.canSee(player)) {
-                ep.connection.send(packetPlayOutPlayerInfo);
-                ep.connection.send(packetPlayOutEntityDestroy);
-                ep.connection.send(packetPlayOutNamedEntitySpawn);
-            }
+        // reset skin
+        if (PaperLib.isPaper()) {
+            SkinChangerPaper.remove(player);
+        } else {
+            SkinChangerSpigot.remove(player);
         }
-    }
-
-    public void resetSkin(HashMap<UUID, TARDISDisguiseTracker.ProfileData> tracker) {
-        ServerPlayer entityPlayer = ((CraftPlayer) player).getHandle();
-        // set name
-        for (org.bukkit.entity.Player p : Bukkit.getOnlinePlayers()) {
-            ServerPlayer ep = ((CraftPlayer) p).getHandle();
-            if (ep != entityPlayer && p.getWorld() == player.getWorld() && p.canSee(player)) {
-                ep.connection.send(new ClientboundPlayerInfoRemovePacket(List.of(entityPlayer.getUUID())));
-            }
-        }
-        TARDISDisguiseTracker.ProfileData map = tracker.get(player.getUniqueId());
-        if (map == null) {
-            plugin.getMessenger().message(plugin.getConsole(), TardisModule.HELPER_WARNING, "Could not get backed up profile data from tracker!");
-            return;
-        }
-        PropertyMap properties = map.getProperties();
-        String oldName = map.getName();
-        try {
-            GameProfile arch = new GameProfile(player.getUniqueId(), oldName);
-            Field nameField = arch.getClass().getDeclaredField("name");
-            nameField.setAccessible(true);
-            nameField.set(arch, oldName);
-            nameField.setAccessible(false);
-            arch.getProperties().putAll(properties);
-            Field gpField = Player.class.getDeclaredField("cD"); // cD = GameProfile
-            gpField.setAccessible(true);
-            gpField.set(entityPlayer, arch);
-            gpField.setAccessible(false);
-        } catch (IllegalAccessException | IllegalArgumentException | NoSuchFieldException | SecurityException e) {
-            tracker.remove(player.getUniqueId());
-            return;
-        }
-        ClientboundPlayerInfoUpdatePacket packetPlayOutPlayerInfo = new ClientboundPlayerInfoUpdatePacket(ClientboundPlayerInfoUpdatePacket.Action.ADD_PLAYER, entityPlayer);
-        ClientboundRemoveEntitiesPacket packetPlayOutEntityDestroy = new ClientboundRemoveEntitiesPacket(player.getEntityId());
-        ClientboundAddEntityPacket packetPlayOutNamedEntitySpawn = new ClientboundAddEntityPacket(entityPlayer, 0, entityPlayer.blockPosition());
-        for (org.bukkit.entity.Player p : Bukkit.getOnlinePlayers()) {
-            ServerPlayer ep = ((CraftPlayer) p).getHandle();
-            if (ep != entityPlayer && p.getWorld() == player.getWorld() && p.canSee(player)) {
-                ep.connection.send(packetPlayOutPlayerInfo);
-                ep.connection.send(packetPlayOutEntityDestroy);
-                ep.connection.send(packetPlayOutNamedEntitySpawn);
-            }
-        }
-        tracker.remove(player.getUniqueId());
+        TARDISDisguiseTracker.ARCHED.remove(player.getUniqueId());
     }
 }
